基本功能及界面

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <div id="board">
     <div id="map"></div>
     <div id="bar">
-      <ul id="logo">TETRIS</ul>
+      <ul id="logo">
+        <li class="main"><a href="index.html">TETRIS</a></li>
+        <li>俄罗斯方块</li>
+      </ul>
       <ul id="info">
         <li class="info-item" id="score">
-          <div class="label">分数</div>
+          <div class="label">分数 - SCORE</div>
           <div class="number" id="score-num">0</div>
         </li>
         <li class="info-item" id="lines">
