--- a/index.html
+++ b/index.html
@@ -55,8 +55,17 @@
       </ul>
     </div>
     <div id="info-board">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos fugiat unde pariatur dolorum excepturi fuga voluptatum ad. Sed corporis fuga perspiciatis modi, nam, quas expedita autem illo maxime qui nemo?</p>
-      <p>俄罗斯方块 哈哈</p>
+      <p>Tetris - 俄罗斯方块</p>
+      <p>by SciArTech</p>
+      <p>按键：</p>
+      <ul>
+        <li>左右： 方向左右键/AD</li>
+        <li>旋转： 方向上键/W</li>
+        <li>向下加速： 方向下键/S</li>
+        <li>落地： 空格</li>
+        <li>暂停/开始： P</li>
+        <li>重新开始： R</li>
+      </ul>
     </div>
   </div>
   <script src="scripts/main.js"></script>
